fix(light mode): light mode does not have contrast

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,4 @@
 
 :root {
   font-family: "Poppins", sans-serif;
-
-  color-scheme: light dark;
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
 }
